<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_engine"
            android:text="@string/engine"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_engine"
            android:layout_toRightOf="@id/tv_engine"
            android:layout_marginTop="10dp"
            >
        </Spinner>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_engine"
            android:text="@string/choose_engine"
            android:layout_below="@id/tv_engine"
            android:background="@color/orange"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:onClick="btnEngineOnClick"
            >
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_market"
            android:layout_below="@id/btn_engine"
            android:text="@string/market"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_market"
            android:layout_below="@id/btn_engine"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/tv_market"
            >
        </Spinner>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_market"
            android:text="@string/choose_market"
            android:layout_below="@id/tv_market"
            android:background="@color/orange"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:onClick="btnMarketOnClick"
            >
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_security"
            android:layout_below="@id/btn_market"
            android:text="@string/security"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_security"
            android:layout_below="@id/btn_market"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/tv_security"
            >
        </Spinner>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_security"
            android:text="@string/choose_security"
            android:layout_below="@id/tv_security"
            android:background="@color/orange"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:onClick="btnSecurityOnClick"
            >
        </Button>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_below="@id/btn_security"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar_horizontal"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_below="@id/progress_bar"
            android:indeterminate="false"
            />

        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/progress_bar_horizontal"
            android:id="@+id/graph_view"
            >
        </com.jjoe64.graphview.GraphView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/graph_view"
            android:id="@+id/tv_num_days"
            android:text="@string/num_days"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/graph_view"
            android:id="@+id/et_num_days"
            android:layout_toRightOf="@id/tv_num_days"
            android:inputType="number"
            android:hint="50"
            >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_num_days"
            android:id="@+id/tv_num_neuro"
            android:text="@string/num_neuro"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_num_days"
            android:id="@+id/et_num_neuro"
            android:layout_toRightOf="@id/tv_num_neuro"
            android:inputType="number"
            android:hint="10"
            >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_num_neuro"
            android:id="@+id/tv_num_layers"
            android:text="@string/num_layers"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_num_neuro"
            android:layout_toRightOf="@id/tv_num_layers"
            android:id="@+id/et_num_layers"
            android:inputType="number"
            android:hint="0"
            android:cursorVisible="false"
            android:focusable="false"
            android:longClickable="false"
            >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_num_layers"
            android:id="@+id/tv_num_max_iterations"
            android:text="@string/num_max_iterations"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_num_layers"
            android:layout_toRightOf="@id/tv_num_max_iterations"
            android:id="@+id/et_num_max_iterations"
            android:inputType="number"
            android:hint="100"
            >
        </EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_study_perceptron"
            android:text="@string/study_perceptron"
            android:layout_below="@id/et_num_max_iterations"
            android:background="@color/orange"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:onClick="btnStudyPerpceptronOnClick"
            >
        </Button>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_study_perceptron"
            android:id="@+id/progress_bar_neuro"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_bar_neuro"
            android:id="@+id/progress_bar_neuro_horizontal"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="false"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_bar_neuro_horizontal"
            android:id="@+id/tv_log_title"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/log_title"
            >
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_log_title"
            android:id="@+id/tv_log"
            android:textSize="15sp"
            android:textColor="@color/dark"
            >
        </TextView>

    </RelativeLayout>

</ScrollView>